--- a/Web Page/projects.html
+++ b/Web Page/projects.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
+    <title>Projects Page</title>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/projects.css">
 </head>
 <body>
     <nav>
@@ -24,25 +24,12 @@
     </nav>
 
     <main>
-        <section>
-            <p>Welcome Back!</p>
 
-            <input id="login_username" placeholder="Username">
-            <input id="login_password" placeholder="Password">
-        </section>
-        <section>
-            <p>
-                Register
-            </p>
-            <input id="register_username" placeholder="Username">
-            <input id="register_email" placeholder="Email">
-            <input id="register_password" placeholder="Password">
-        </section>
     </main>
 
     <footer>
         Copyright @ 2019
     </footer>
 </body>
-<script src="js/index.js"></script>
+<script src="js/projects.js"></script>
 </html>
