--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -29,6 +29,7 @@
 
             <input id="login_username" placeholder="Username">
             <input id="login_password" placeholder="Password">
+            <button>Log In</button>
         </section>
         <section>
             <p>
@@ -37,6 +38,7 @@
             <input id="register_username" placeholder="Username">
             <input id="register_email" placeholder="Email">
             <input id="register_password" placeholder="Password">
+            <button>Register</button>
         </section>
     </main>
 
